# telescope-devkit

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
data/: aws-accounts.json
telemetry/telescope_devkit/: __init__.py  asg.py  cli.py  codebuild.py  devkit.py  docker.py  ec2.py  elasticsearch.py  filesystem.py  git.py  grafana.py  logger.py  logs.py  msk.py  multiaccount.py  ssh.py  sts.py
telemetry/telescope_devkit/migration/: checks.py  cli.py
tools/: README.md  all-the-buckets.sh  check_tool_versions.sh  cleanup-cw-log-subscriptions.sh  password-generator.sh  update_ami_submodule.sh  update_docker_templates.sh  update_lambda_templates.sh  yaml-expand.sh
tools/clickhouse/: update-graphite-values.sh
