[tool.poetry]
name = "telescope-devkit"
version = "0.1.0"
description = ""
authors = ["Vítor Brandão <109226+vitorbrandao@users.noreply.github.com>"]
maintainers = ["Team Telemetry"]
packages = [
  { include = "telemetry" }
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.10.0"
fire = "^0.4.0"
boto3 = "^1.17.7"
boto3-stubs = {extras = ["ec2", "logs"], version = "^1.17.7"}
GitPython = "^3.1.13"
docker = "^4.4.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
