[tool.poetry]
name = "telescope-devkit"
version = "0.1.0"
description = "Software Development Kit for Telemetry Engineers"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
maintainers = ["Team Telemetry"]
packages = [
  { include = "telemetry" }
]

[tool.poetry.dependencies]
boto3 = "1.17.7"
boto3-stubs = {extras = ["ec2", "logs"], version = "1.17.7"}
docker = "^4.4.4"
fire = "^0.4.0"
GitPython = "^3.1.13"
python = "^3.9"
requests = "^2.25.1"
rich = "9.10.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.2"
black = "^22.3.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
